--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <main>
       <section class="container">
         <div class="container_imag">
-          <img src="images/icon-view.svg" class="container_imag-icon" alt="icon view">
+          <figure class="container_imag-icon">
+            <img src="images/icon-view.svg" alt="icon view" />
+          </figure>
         </div>
         <img
           src="images/image-equilibrium.jpg"
