commit index css

--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
             class="img_creator"
             alt="creator card"
           />
-          <p class="text_creator">
-            <span class="text-color">Creation of</span>
-            <span class="text_name">Jules Wyvern</span>
-          </p>
+          <div class="text_creator">
+            <p>
+              <span class="text-color">Creation of</span>
+              <span class="text_name">Jules Wyvern</span>
+            </p>
+          </div>
         </div>
       </section>
     </main>
